<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangouts Mods</string>
    <string name="action_settings">Settings</string>
    <string name="category_general">General</string>
    <string name="category_flash">Torch</string>
    <string name="replace_smiley_title">Enter Key</string>
    <string name="replace_smiley_summary">Replace Smiley Button with Enter Button </string>
    <string name="no_fullscreen_title">No Fullscreen</string>
    <string name="no_fullscreen_summary">Disable Fullscreen for keyboard in Landscape mode </string>
    <string name="replace_punctuation_title">Voice Punctuation</string>
    <string name="replace_punctuation_summary">Replace words by corresponding punctuations in voice input</string>
    <string name="privacy_mode_title">Privacy mode</string>
    <string name="privacy_mode_summary">Hides the sender and text message when receiving a SMS notification</string>
    <string name="privacy_show_sender_title">Privacy - show Sender</string>
    <string name="privacy_show_sender_summary">Shows the sender in privacy mode</string>
    <string name="privacy_add_show_btn_title">(ROOT)Privacy - add Show Button</string>
    <string name="privacy_add_show_btn_summary">The Show button will reveal SMS sender and text and action buttons</string>
    <string name="unlimited_textbox_title">Unlimited Textbox</string>
    <string name="unlimited_textbox_summary">Removes the 3-lines height limit for the SMS typing box</string>
    <string name="wake_on_new_SMS_title">Wake device</string>
    <string name="wake_on_new_SMS_summary_off">Screen remains off when a new SMS or Hangout is received</string>
    <string name="wake_on_new_SMS_summary_on">Screen turns on when a new SMS or Hangout is received</string>
    <string name="flash_flashlight_title">Enable torch notifications</string>
    <string name="flash_flashlight_summary">Torch activates when a new SMS or Hangout is received</string>
    <string name="flash_flashlight_screen_on_title">Flash with screen on</string>
    <string name="flash_flashlight_screen_on_summary_off">Only flash when screen is off</string>
    <string name="flash_flashlight_screen_on_summary_on">Flash when screen is on or off</string>
    <string name="flash_flashlight_fast_cancel_title">Fast cancel</string>
    <string name="flash_flashlight_fast_cancel_summary_off">Keep flashing after the screen has turned on</string>
    <string name="flash_flashlight_fast_cancel_summary_on">Stop flashing when the screen is turned on</string>
    <string name="flash_flashlight_interval_title">Interval</string>
    <string name="flash_flashlight_interval_summary">How long to pause between flashes</string>
    <string name="flash_flashlight_duration_title">Duration</string>
    <string name="flash_flashlight_duration_summary">How long to keep the flash on</string>
    <string name="flash_flashlight_repetitions_title">Repetitions</string>
    <string name="flash_flashlight_repetitions_summary">How many times to flash before timing out</string>
    <string name="sms_icon_color_title">Choose SMS icon color</string>
    <string name="sms_icon_color_summary">Choose the color of the sms icon in the status bar</string>
    <string name="add_buttons_title">Notification buttons</string>
    <string name="add_buttons_summary">Adds the \'Respond\', \'Call\' and \'Mark as read\' buttons in SMS notifications</string>
    <string name="sms_custom_icon_color_toggle_title">Activate custom icon color</string>
    <string name="changes_apply_on_reboot">Reboot for changes to take effect</string>
    <string name="crash_toast_text">bug report</string>
    <string name="all_sms_apps">All SMS apps mods</string>
    <string name="stock_or_hangouts">AOSP SMS or Hangouts Mods</string>
    <string name="hangouts_only">Hangouts Mods</string>
    <string name="stock_only">AOSP SMS mods</string>
    <string name="root_needed">Root is needed for this functionnality</string>
    <string name="marked_as_read">Marked as read</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

</resources>